[package]
name = "daisyworld"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"


[[bin]]
name = "daisyworld"
path = "src/main.rs"


[lib]
name = "daisyworld"
path = "lib/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray="0.12.1"
rand = "0.7.0"
nannou = "0.10"

[patch.crates-io]
shaderc = { git = "https://github.com/mitchmindtree/shaderc-rs", branch = "lib_detect_patch_0.5.1" }
shaderc-sys = { git = "https://github.com/mitchmindtree/shaderc-rs", branch = "lib_detect_patch_0.5.1" }
